# cxltime

./: CMakeLists.txt
.github/workflows/: macos-slugallocator.yml
attach/: CMakeLists.txt
attach/frida_uprobe_attach_impl/: CMakeLists.txt
attach/pgas_attach_impl/: CMakeLists.txt
attach/pgas_attach_impl/include/: pgas_attach_impl.hpp  pgas_cxlmemsim_integration.hpp  pgas_stalker_mov.hpp
attach/pgas_attach_impl/src/: pgas_attach_impl.cpp  pgas_cxlmemsim_integration.cpp  pgas_stalker_mov.cpp  pgas_stalker_stub.cpp
attach/pgas_attach_impl/test/: test_cxlmemsim_hook.cpp
cmake/: StandardSettings.cmake
runtime/agent/: CMakeLists.txt
tools/: CMakeLists.txt
tools/pgas_preload/: CMakeLists.txt  README.md  pgas_preload.cpp
tools/pgas_preload/regression/: cxlmemsim_direct_pattern_verify.c  pgas_preload_cross_process_test.c
tools/pgas_preload/scripts/: slurm_direct_pattern_verify.sh  slurm_preload_cross_process_test.sh
tools/slug_allocator/: CMakeLists.txt  README.md  SlugAllocatorPass.cpp  slug_runtime.cpp
tools/slug_allocator/include/: slug_allocator.h
vm/vm-core/: CMakeLists.txt
