add_subdirectory(base_attach_impl)
add_subdirectory(frida_uprobe_attach_impl)
add_subdirectory(simple_attach_impl)
if(BPFTIME_BUILD_PGAS_ATTACH)
  add_subdirectory(pgas_attach_impl)
endif()
if(UNIX AND NOT APPLE)
  if(SPLASH_ARM_PORT AND CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64|arm)")
    message(STATUS "SPLASH_ARM_PORT: skipping syscall_trace_attach_impl and text_segment_transformer on ARM")
  else()
    add_subdirectory(syscall_trace_attach_impl)
    add_subdirectory(text_segment_transformer)
  endif()

  if(${BPFTIME_ENABLE_CUDA_ATTACH})
    add_subdirectory(nv_attach_impl)
  endif()
  
endif()
