if(BPFTIME_BUILD_BPFTIME_TOOLS AND BPFTIME_BUILD_RUNTIME)
  add_subdirectory(bpftimetool)
  add_subdirectory(cli)
endif()
if(BPFTIME_BUILD_SLUG_ALLOCATOR)
  add_subdirectory(slug_allocator)
endif()
if(BPFTIME_BUILD_PGAS_PRELOAD AND TARGET bpftime_pgas_attach_impl)
  add_subdirectory(pgas_preload)
endif()
if(BPFTIME_LLVM_JIT AND BPFTIME_BUILD_RUNTIME)
  message(STATUS "Using llvm-jit")
  add_subdirectory(aot)
endif()
